--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<li><a href="#intro" class="active">Introduction</a></li>
 							<li><a href="#first">First Section</a></li>
 							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#cta">Contact</a></li>
 						</ul>
 					</nav>
 
@@ -37,11 +37,9 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>About Me</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>I am a student in Aurora Illinois.</p>
 										<ul class="actions">
 											<li><a href="generic" class="button">Learn More</a></li>
 										</ul>
@@ -53,7 +51,7 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>My Work</h2>
 								</header>
 								<ul class="features">
 									<li>
