--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 								<dt>Phone</dt>
 								<dd>(000) 000-0000 x 0000</dd>
 								<dt>Email</dt>
-								<dd><a href="mailro:rajasmgandhi@gmail.com">rajasmgandhi@gmail.com</a></dd>
+								<dd><a href="mailto:rajasmgandhi@gmail.com">rajasmgandhi@gmail.com</a></dd>
 							</dl>
 							<!--<ul class="icons">
 								<li><a href="#" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
