--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 								<ul class="features">
 									<li>
 										<span class="icon major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>RMG Studios</h3>
+										<p>I started making apps for Android. The first app I have created is TicTacToe on the Play Store. I plan on making more utility apps and games, and eventually expanding into the iOS platform.</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
