--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/favicon.png" alt="" /></span>
+						<span class="logo"><img src="images/logo.png" alt="" /></span>
 						<h1>Rajas Gandhi</h1>
 						
 					</header>
