--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div id="wrapper">
 
 				<!-- Header -->
-					<header id="header" class="alt">
+					<header id="header" class="alt" style="height:100vh;">
 						<span class="logo"><img style="width=100%; height=100%" src="images/logo.png" alt="" /></span>
 						<h1>Rajas Gandhi</h1>
 						
