--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 				<!-- Header -->
 					<header id="header" class="alt" style="height:100vh;">
-						<span class="logo"><img style="width=100%; height=100%" src="images/logo.png" alt="" /></span>
-						<h1>Rajas Gandhi</h1>
+						<span class="logo"><img style="width=100%; height=100vh" src="images/logo.png" alt="" /></span>
+						<!--<h1>Rajas Gandhi</h1>-->
 						
 					</header>
 
