--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Web Developing</h3>
+										<p>I have created many websites in the past and continue to make more. Some of my most notable ones are <a href="https://nsgamezz.github.io">nsgamezz.github.io</a> and I have collaborated on <a href="https://codedhuman.github.io/webpong">codedhuman.github.io/webpong</a></p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-diamond"></span>
