--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt" style="height:100vh;">
-						<span class="logo"><img style="width=100%; height=100vh" src="images/logo.png" alt="" /></span>
+						<span class="logo"><img src="images/logo.png" alt="Logo" /></span>
 						<!--<h1>Rajas Gandhi</h1>-->
 						
 					</header>
