--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Contact</a></li>
+							<li><a href="#mywork">My Work</a></li>
+							<li><a href="#myskills">My Skills</a></li>
+							<li><a href="#contact">Contact Me</a></li>
 						</ul>
 					</nav>
 
@@ -50,7 +50,7 @@
 							</section>
 
 						<!-- First Section -->
-							<section id="first" class="main special">
+							<section id="mywork" class="main special">
 								<header class="major">
 									<h2>My Work</h2>
 								</header>
@@ -79,11 +79,10 @@
 							</section>
 
 						<!-- Second Section -->
-							<section id="second" class="main special">
+							<section id="myskills" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>My Skills</h2>
+									<p>The following statistics show my skills in various areas.</p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
@@ -116,38 +115,31 @@
 							</section>
 
 						<!-- Get Started -->
-							<section id="cta" class="main special">
+							<section id="contact" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Contact Me</h2>
+									<p>I am free and willing to talk to anyone about my projects, skills, etc.<br />
+									Feel free to contact me if you are looking for project help and you think I could.<br />
+									Contact info is listed below.</p>
 								</header>
-								<footer class="major">
+								<!--<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic" class="button primary">Get Started</a></li>
 										<li><a href="generic" class="button">Learn More</a></li>
 									</ul>
-								</footer>
+								</footer>-->
 							</section>
 
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
+					
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="generic" class="button">Learn More</a></li>
-							</ul>
-						</section>
-						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Contact Info</h2>
 							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
 								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
+								<dd>+1 (331) 321-6129</dd>
 								<dt>Email</dt>
 								<dd><a href="mailto:rajasmgandhi@gmail.com">rajasmgandhi@gmail.com</a></dd>
 							</dl>
