--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									<h2>My Skills</h2>
 									<p>The following statistics show my skills in various areas.</p>
 								</header>
-								<ul class="statistics">
+								<!--<ul class="statistics">
 									<li class="style1">
 										<span class="icon fa-code-fork"></span>
 										<strong>5,120</strong> Etiam
@@ -105,7 +105,36 @@
 										<span class="icon fa-diamond"></span>
 										<strong>1,024</strong> Nullam
 									</li>
-								</ul>
+								</ul>-->
+								<p>HTML</p>
+								<div class="container">
+								  <div class="skills html">90%</div>
+								</div>
+
+								<p>JavaScript/p>
+								<div class="container">
+								  <div class="skills js">80%</div>
+								</div>
+								
+								<p>Android Studio</p>
+								<div class="container">
+								  <div class="skills as">75%</div>
+								</div>
+
+								<p>CSS</p>
+								<div class="container">
+								  <div class="skills css">65%</div>
+								</div>
+
+								<p>Java</p>
+								<div class="container">
+								  <div class="skills java">60%</div>
+								</div>
+								
+								<p>Python</p>
+								<div class="container">
+								  <div class="skills py">50%</div>
+								</div>
 								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
 								<footer class="major">
 									<ul class="actions special">
@@ -120,7 +149,7 @@
 									<h2>Contact Me</h2>
 									<p>I am free and willing to talk to anyone about my projects, skills, etc.<br />
 									Feel free to contact me if you are looking for project help and you think I could.<br />
-									Contact info is listed below.</p>
+									help you. Contact info is listed below.</p>
 								</header>
 								<!--<footer class="major">
 									<ul class="actions special">
