--- a/index.html
+++ b/index.html
@@ -107,32 +107,32 @@
 										<strong>1,024</strong> Nullam
 									</li>
 								</ul>-->
-								<p>HTML</p>
+								<p style="margin-bottom:6px">HTML</p>
 								<div class="container">
 								  <div class="skills html">90%</div>
 								</div>
 
-								<p>JavaScript/p>
+								<p style="margin-bottom:6px">JavaScript</p>
 								<div class="container">
 								  <div class="skills js">80%</div>
 								</div>
 								
-								<p>Android Studio</p>
+								<p style="margin-bottom:6px">Android Studio</p>
 								<div class="container">
 								  <div class="skills as">75%</div>
 								</div>
 
-								<p>CSS</p>
+								<p style="margin-bottom:6px">CSS</p>
 								<div class="container">
 								  <div class="skills css">65%</div>
 								</div>
 
-								<p>Java</p>
+								<p style="margin-bottom:6px">Java</p>
 								<div class="container">
 								  <div class="skills java">60%</div>
 								</div>
 								
-								<p>Python</p>
+								<p style="margin-bottom:6px">Python</p>
 								<div class="container">
 								  <div class="skills py">50%</div>
 								</div>
