--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<!-- Header -->
 					<header id="header" class="alt" style="height:100vh;">
 						<span class="logo"><img src="images/logo.png" alt="Logo" /></span>
-						<div class="arrow bounce"><a class="fa fa-arrow-down fa-2x" href="#mywork"></a></div>
+						<div class="arrow bounce"><a class="fa fa-arrow-down fa-3x" href="#intro"></a></div>
 						<!--<h1>Rajas Gandhi</h1>-->
 						
 					</header>
