--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									<li>
 										<span class="icon major style1 fa-code"></span>
 										<h3>RMG Studios</h3>
-										<p>I started making apps for Android. The first app I have created is TicTacToe on the Play Store. I plan on making more utility apps and games, and eventually expanding into the iOS platform.</p>
+										<p>I started making apps for Android. The first app I have created is TicTacToe on the Play Store. Another app that I am currently working on is called Walkware. It will alert users and stop their music if they are walking across the street so they can cross safely in a city setting.</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
@@ -86,8 +86,6 @@
 								  <div class="skills html">90%</div>
 								</div>
 								
-								<br>
-								<br>
 								<br>
 								<br>
 								
