--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Web Developing</h3>
-										<p>I have created many websites in the past and continue to make more. Some of my most notable ones are <a href="https://nsgamezz.github.io">nsgamezz.github.io</a> and I have collaborated on <a href="https://codedhuman.github.io/webpong">codedhuman.github.io/webpong</a></p>
+										<p>I have created many websites in the past and continue to make more. Some of my most notable ones are <a href="https://nsgamezz.github.io">nsgamezz.github.io</a> and I have collaborated on <a href="https://gandhiprep.com">gandhiprep.com</a></p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-diamond"></span>
