--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 
 				<!-- Header -->
 					<header id="header" class="alt" style="height:100vh;">
-						<span class="logo"><img src="images/logo.png" alt="Logo" /></span>
+						<!--<span class="logo"><img src="images/logo.png" alt="Logo" /></span>-->
+						<h1>Rajas Gandhi</h1>
 						<div style="border-bottom:none;" class="arrow bounce"><a style="border-bottom:none" class="fa fa-arrow-down fa-3x" href="#intro"></a></div>
-						<!--<h1>Rajas Gandhi</h1>-->
+						
 						
 					</header>
 
