--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 					<header id="header" class="alt" style="height:100vh;">
 						<!--<span class="logo"><img src="images/logo.png" alt="Logo" /></span>-->
 						<h1>Rajas Gandhi</h1>
+						<h1>This pen is
+  <span
+     class="txt-rotate"
+     data-period="2000"
+     data-rotate='[ "nerdy.", "simple.", "pure JS.", "pretty.", "fun!" ]'></span>
+</h1>
+<h2>A single &lt;span&gt; is all you need.</h2>
 						<div style="border-bottom:none;" class="arrow bounce"><a style="border-bottom:none" class="fa fa-arrow-down fa-3x" href="#intro"></a></div>
 						
 						
