--- a/index.html
+++ b/index.html
@@ -197,5 +197,6 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/scroll.js"></script>
+			<script src="assets/js/typedtext.js"></script>
 	</body>
 </html>
