--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 				<!-- Header -->
 					<header id="header" class="alt" style="height:100vh;">
-						<!--<span class="logo"><img src="images/logo.png" alt="Logo" /></span>-->
-						<h1>Rajas Gandhi</h1>
-						<h1>I am
+						<span class="logo"><img src="images/logo.png" alt="Logo" /></span>
+						<!--<h1>Rajas Gandhi</h1>-->
+						<h1 style="margin-top:5vh">I am
   <span
      class="txt-rotate"
      data-period="500"
