--- a/contact-form.html
+++ b/contact-form.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<form id="contact-form" name="contact-form" method="post" action="form-processing.php">
+<form action="https://formspree.io/email@domain.tld" method="POST" />
     <p>
       <label>Name:<br />
         <input name="Name" type="text" id="FName" size="30" />
