--- a/contact-form.html
+++ b/contact-form.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<form action="https://formspree.io/rajasmgandhi@gmail.com@domain.tld" method="POST" />
+<form action="https://formspree.io/rajasmgandhi@gmail.com" method="POST" />
     <p>
       <label>Name:<br />
         <input name="Name" type="text" id="FName" size="30" />
@@ -14,7 +14,7 @@
     </p>
     <p>
       <label>Email:<br />
-        <input name="Email" type="text" id="Email" size="48" />
+        <input name="_replyto" type="text" id="Email" size="48" />
       </label>
     </p>
     <p>
