--- a/contact-form.html
+++ b/contact-form.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Contact Form</title>
@@ -27,6 +27,15 @@
         <input name="button" type="submit" class="submit-button" id="button" value="Send" />
       </label>
     </p>
-  </form>  
+    <p>
+        <input type="hidden" name="_next" value="/" />
+        <input type="hidden" name="_subject" value="Website contact form" />
+        <input type="text" name="_gotcha" style="display:none" />
+    </p>
+  </form>
+    <script>
+    var contactform =  document.getElementById('contactform');
+    contactform.setAttribute('action', '//formspree.io/' + 'rajasmgandhi' + '@' + 'gmail' + '.' + 'com');
+</script>
 </body>
 </html>
