--- a/contact-form.html
+++ b/contact-form.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<form action="https://formspree.io/rajasmgandhi@gmail.com" method="POST" />
+<form method="POST" />
     <p>
       <label>Name:<br />
         <input name="Name" type="text" id="FName" size="30" />
