--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 									<p>I am free and willing to talk to anyone about my projects, skills, etc.<br />
 									Feel free to contact me if you are looking for project help and you think I could<br />
 									help you. Contact info is listed below.</p>
-									<p>Or press the button below</p>
+									<p>Or press the button below.</p>
 									<button onclick="window.location.href='/contact-form'">Contact Me</button>
 								</header>
 							
