--- a/contact-form.html
+++ b/contact-form.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<form method="POST" />
+<form method="POST" action="formspree.io/rajasmgandhi@gmail.com">
     <p>
       <label>Name:<br />
         <input name="Name" type="text" id="FName" size="30" />
@@ -45,6 +45,6 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/email.js"></script>
+    <!--<script src="assets/js/email.js"></script>-->
 </body>
 </html>
