--- a/contact-form.html
+++ b/contact-form.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<form method="POST" action="formspree.io/rajasmgandhi@gmail.com">
+<form method="POST" action="//formspree.io/rajasmgandhi@gmail.com">
     <p>
       <label>Name:<br />
         <input name="Name" type="text" id="FName" size="30" />
