--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <span
      class="txt-rotate"
      data-period="500"
-     data-rotate='[ "just a kid.", "a developer.", "a creator.", "a student.", "a maker." ]'></span>
+     data-rotate='[ "just a kid.", "a developer.", "a creator.", "a tinkerer.", "a maker." ]'></span>
 </h1>
 						<div style="border-bottom:none;" class="arrow bounce"><a style="border-bottom:none" class="fa fa-arrow-down fa-3x" href="#intro"></a></div>
 						
