--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 									</li>
 									<li>
 										<span class="icon major style5 fa-diamond"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Proxy</h3>
+										<p>With the world getting closer together online, sometimes we want to get away from the tracking. This <a href="https://techyx.herokuapp.com">proxy</a> allows you to do just that.</p>
 									</li>
 								</ul>
 							
