--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon major style1 fa-code"></span>
+										<span class="icon major style5 fa-android"></span>
 										<h3>RMG Studios</h3>
 										<p>I started making apps for Android. The first app I have created is TicTacToe on the Play Store. Another app that I am currently working on is called Walkware. It will alert users and stop their music if they are walking across the street so they can cross safely in a city setting.</p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
+										<span class="icon major style5 fa-copy"></span>
 										<h3>Web Developing</h3>
 										<p>I have created many websites in the past and continue to make more. Some of my most notable ones are <a href="https://nsgamezz.com">NSGAMEZZ</a> and I have collaborated on <a href="https://gandhiprep.com">GandhiPrep</a>.</p>
 									</li>
@@ -78,9 +78,14 @@
 										<p>With the world getting closer together online, sometimes we want to get away from the tracking. This <a href="https://techyx.herokuapp.com">proxy</a> allows you to do just that.</p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-diamond"></span>
-										<h3>Bytecode</h3>
+										<span class="icon major style5 fa-bus"></span>
+										<h3>Bytecurve</h3>
 										<p>I have helped the company, <a href="https://bytecurve.com" target="top">Bytecurve</a>, with developing their app for school bus drivers. Bytecurve is the company that manages the bussing system of one of the biggest school districts in Illinois, USA.</p>
+									</li>
+									<li>
+										<span class="icon major style5 fa-code"></span>
+										<h3>Hackathon</h3>
+										<p>I attended a hackathon, <a href="https://windyhacks.com" target="top">Windy City Hacks</a>, in 2019. At this hackathon, although I didn't win anything, I learned many valuable lessons from many industry-leading experts that I have used in other projects of mine.</p>
 									</li>
 								</ul>
 							
