--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 										<p>I have created many websites in the past and continue to make more. Some of my most notable ones are <a href="https://nsgamezz.com">NSGAMEZZ</a> and I have collaborated on <a href="https://gandhiprep.com">GandhiPrep</a>.</p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-diamond"></span>
+										<span class="icon major style5 fa-server"></span>
 										<h3>Proxy</h3>
 										<p>With the world getting closer together online, sometimes we want to get away from the tracking. This <a href="https://techyx.herokuapp.com">proxy</a> allows you to do just that.</p>
 									</li>
@@ -167,9 +167,8 @@
 									Feel free to contact me if you are looking for project help and you think I could<br />
 									help you. Contact info is listed below.</p>
 									<p>Or press the button below.</p>
-									<button onclick="window.location.href='/contact-form'">Contact Me</button>
+									<button onclick="location.href='/contact-form'">Contact Me</button>
 								</header>
-							s
 							</section>
 
 					</div>
