--- a/contact-form.html
+++ b/contact-form.html
@@ -10,7 +10,7 @@
 <title>Contact Form</title>
 </head>
 
-<body>
+<body style="background:white; color:black">
 <form method="POST" action="https://formspree.io/rajasmgandhi@gmail.com">
     <p>
       <label>Name:<br />
