--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="icon" type="image/png" href="images/favicon.png" />
 	</head>
-	<body class="is-preload" style="background:white; color:black">
+	<body class="is-preload">
 
 		<!-- Wrapper -->
 			<div id="wrapper">
