--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 										<header class="major">
 											<h2>About Me</h2>
 										</header>
-										<p>I am a student in Aurora Illinois.</p>
+										<p>I am a student in Aurora Illinois, interested in computer science and using it to help better the world.</p>
 		
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
