--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 										<p>I am a student in Aurora Illinois, interested in computer science and using it to help better the world.</p>
 		
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="images/me.png" alt="" /></span>
 								</div>
 							</section>
 
