--- a/index.html
+++ b/index.html
@@ -189,10 +189,11 @@
 								<dd><a href="mailto:rajasmgandhi@gmail.com">rajasmgandhi@gmail.com</a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="https://twitter.com/_rajasgandhi" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.twitter.com/_rajasgandhi" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.facebook.com/rajas.gandhi.77" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/_rajasgandhi/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://github.com/nsgamezz" class="icon fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.github.com/nsgamezz" class="icon fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/rajas-gandhi-2134101a7/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 						
 						</section>
