--- a/contact-form2.html
+++ b/contact-form2.html
@@ -14,22 +14,22 @@
 <form name="contactform" id="contactform" enctype="text/plain">
     <p>
       <label>First Name:<br />
-        <input name="firstname" type="text" id="entry.22815847" size="30" />
+        <input name="firstname" type="text" id="firstname" size="30" />
       </label>
     </p>
     <p>
       <label>Last Name:<br />
-        <input name="lastname" type="text" id="entry.2098725634" size="30" />
+        <input name="lastname" type="text" id="lastname" size="30" />
       </label>
     </p>
     <p>
       <label>Email:<br />
-        <input name="email" type="text" id="entry.546969202" size="48" />
+        <input name="email" type="text" id="email" size="48" />
       </label>
     </p>
     <p>
       <label>Message:<br />
-        <textarea name="message" id="entry.82328721" cols="50" rows="7"></textarea>
+        <input name="message" id="message" cols="50" rows="7"></textarea>
       </label>
     </p>
     <p>
@@ -51,6 +51,7 @@
      
     </script>
     <script>
+        import 'whatwg-fetch';
     var $form = $('form#contactform'),
     url = 'https://script.google.com/macros/s/AKfycby610OkVu1hpyIBOVL8lSMsOXj9m3Zj6L41CfgbdsX0uM9TtuU/exec'
 
